# Crypto-DataLake

./: .env  .env.example  .gitignore  Makefile  README.md  pyproject.toml
airflow/scripts/: init_airflow.sh
docs/: ARCHITECTURE_DIAGRAMS.md  DEVELOPER_GUIDE.md  HLD.md  IMPLEMENTATION_PLAN.md  LLD.md  OPERATIONS_GUIDE.md  README.md  missing_fields_implementation.md
scripts/: run-aggregator.sh  run-intellij.sh  run-live-price-service.sh  run-live.sh  stop-aggregator.sh  stop-live-price-service.sh
src/aggregator/: __init__.py  aggregation_rules.py  backfill.py  bucketing.py  config.py  incremental.py  main.py  source_reader.py  state_store.py  target_writer.py  validator.py
src/binance_minute_lake/cli/: app.py
src/binance_minute_lake/core/: binance_usage.py  config.py  schema.py
src/binance_minute_lake/pipeline/: orchestrator.py
src/binance_minute_lake/sources/: rest.py  vision_loader.py  (+1 more)
src/live_data_api_service/: __init__.py  aggregation.py  alignment.py  app.py  binance_provider.py  capabilities.py  config.py  parallel_provider.py  repository.py  service.py  timeframes.py  utils.py  ws_manager.py
src/live_indicators/: __init__.py  aggregation.py  ema.py  pivots.py  service.py  timeframes.py
tests/: test_aggregator.py  test_atomic_writer.py  test_backfill_loader_cli.py  test_intellij_cli_helpers.py  test_live_collector.py  test_live_data_api_service.py  test_live_indicators.py  test_orchestrator_live_agg_trades.py  test_rest_client.py  test_schema_registry.py  test_transform_engine.py  test_vision_loader.py  test_websocket_payload_processor.py
(+2 files in other folders)
