[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "binance-minute-lake"
version = "0.1.0"
description = "Production-grade Binance UM futures 1-minute data lake ingestion pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Data Engineering Team" }
]
dependencies = [
  "httpx>=0.27.0",
  "polars>=1.8.0",
  "pyarrow>=17.0.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "tenacity>=9.0.0",
  "websockets>=12.0",
  "typer>=0.12.5",
  "rich>=13.7.1"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.1",
  "pre-commit>=3.8.0",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.4"
]

[project.scripts]
bml = "binance_minute_lake.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/binance_minute_lake"]

[tool.pytest.ini_options]
addopts = "-q --cov=src/binance_minute_lake --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "RUF"]
ignore = ["S101", "E712", "UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
show_error_codes = true
pretty = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["polars.*"]
ignore_missing_imports = true
